force-app/main/default/objects/Contribution_Share__c/Contribution_Share__c.object-meta.xml
<CustomObject>
    <description>Object that defines the share of contribution that is assigned for a certain Project Owner in an order.</description>
    <label>Contribution Share</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Contribution Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution Shares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>