force-app/main/default/objects/Contribution_Share__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Buying Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contribution Share</relationshipLabel>
    <relationshipName>Contribution_Share</relationshipName>
    <type>Lookup</type>
</CustomField>