force-app/main/default/objects/Contribution_Share__c/fields/Account_SF_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_SF_Number__c</fullName>
    <formula>Account__r.SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SF Number</label>
    <type>Text</type>
</CustomField>