force-app/main/default/objects/Contribution_Share__c/fields/Account_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Account_uB_Office__c</fullName>
    <formula>text(Account__r.uB_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account uB Office</label>
    <type>Text</type>
</CustomField>