force-app/main/default/objects/Contribution_Share__c/fields/CS_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_Unique_ID__c</fullName>
    <description>Unique ID to avoid duplicate creation</description>
    <label>CS Unique ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>