force-app/main/default/objects/Contribution_Share__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>When Contribution Share has been submitted</description>
    <inlineHelpText>When Contribution Share has been submitted</inlineHelpText>
    <label>Date Submitted</label>
    <type>DateTime</type>
</CustomField>