force-app/main/default/objects/Contribution_Share__c/fields/Email_Account_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Email_Account_Channel_Manager__c</fullName>
    <description>Email address of Channel Manager of Account. Populated through the Workflow Field Update</description>
    <inlineHelpText>Email address of Channel Manager of Account. Populated through the Workflow Field Update</inlineHelpText>
    <label>Email Account Channel Manager</label>
    <type>Email</type>
</CustomField>