force-app/main/default/objects/Contribution_Share__c/fields/Email_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Email_Account_Owner__c</fullName>
    <description>Email address of Account Owner. Populated through the Workflow Field Update</description>
    <inlineHelpText>Email address of Account Owner. Populated through the Workflow Field Update</inlineHelpText>
    <label>Email Account Owner</label>
    <type>Email</type>
</CustomField>