force-app/main/default/objects/Contribution_Share__c/fields/Email_Country_Manager_AU__c.field-meta.xml
<CustomField>
    <fullName>Email_Country_Manager_AU__c</fullName>
    <description>User to send email alerts</description>
    <inlineHelpText>User to send email alerts</inlineHelpText>
    <label>Email Country Manager AU</label>
    <type>Email</type>
</CustomField>