force-app/main/default/objects/Contribution_Share__c/fields/Email_End_Customer_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Email_End_Customer_Account_Owner__c</fullName>
    <description>Email address of End Customer Account Owner. Populated through the Workflow Field Update</description>
    <inlineHelpText>Email address of End Customer Account Owner. Populated through the Workflow Field Update</inlineHelpText>
    <label>Email End Customer Account Owner</label>
    <type>Email</type>
</CustomField>