force-app/main/default/objects/Contribution_Share__c/fields/Email_of_Approver_APAC__c.field-meta.xml
<CustomField>
    <fullName>Email_of_Approver_APAC__c</fullName>
    <description>Populated with the Workflow</description>
    <inlineHelpText>Populated with the Workflow</inlineHelpText>
    <label>Email of Approver APAC</label>
    <type>Email</type>
</CustomField>