force-app/main/default/objects/Contribution_Share__c/fields/Email_Project_Owner_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Email_Project_Owner_Account_Owner__c</fullName>
    <description>Email address of Project Owner Account Owner. Populated through the Workflow Field Update</description>
    <inlineHelpText>Email address of Project Owner Account Owner. Populated through the Workflow Field Update</inlineHelpText>
    <label>Email Project Owner Account Owner</label>
    <type>Email</type>
</CustomField>