force-app/main/default/objects/Contribution_Share__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer of buying account. Only used for clarification, it is not used for contribution split.</inlineHelpText>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contribution Shares (End Customer)</relationshipLabel>
    <relationshipName>Contribution_Shares1</relationshipName>
    <type>Lookup</type>
</CustomField>