force-app/main/default/objects/Contribution_Share__c/fields/End_Customer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account_ID__c</fullName>
    <description>Used for matching with Order (in the Apex Class)</description>
    <formula>End_Customer__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for matching with Order (in the Apex Class)</inlineHelpText>
    <label>End Customer Account ID</label>
    <type>Text</type>
</CustomField>