force-app/main/default/objects/Contribution_Share__c/fields/End_Customer_SF_Number__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_SF_Number__c</fullName>
    <formula>End_Customer__r.SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer SF Number</label>
    <type>Text</type>
</CustomField>