force-app/main/default/objects/Contribution_Share__c/fields/End_Customer_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_uB_Office__c</fullName>
    <formula>text( End_Customer__r.uB_Office__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer uB Office</label>
    <type>Text</type>
</CustomField>