force-app/main/default/objects/Contribution_Share__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contribution Shares</relationshipLabel>
    <relationshipName>Contribution_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>