force-app/main/default/objects/Contribution_Share__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product to be used for matching Orders</description>
    <inlineHelpText>Product to be used for matching Orders</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contribution Shares</relationshipLabel>
    <relationshipName>Contribution_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>