force-app/main/default/objects/Contribution_Share__c/fields/Product_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Product_Filter_Field__c</fullName>
    <inlineHelpText>Product field which is used in the matching logic of the Contribution Share process.</inlineHelpText>
    <label>Product Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
                <label>Product Family</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>