force-app/main/default/objects/Contribution_Share__c/fields/Product_Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Filter_Value__c</fullName>
    <inlineHelpText>Product field value which is used in the matching logic of the Contribution Share process. Product Filter Field must be selected.</inlineHelpText>
    <label>Product Filter Value</label>
    <length>120</length>
    <type>Text</type>
</CustomField>