force-app/main/default/objects/Contribution_Share__c/fields/Project_Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Account for which this contribution share applies</inlineHelpText>
    <label>Project Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contribution Shares (Project Owner Account)</relationshipLabel>
    <relationshipName>Contribution_Shares</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>