force-app/main/default/objects/Contribution_Share__c/fields/Project_Owner_SF_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_SF_Number__c</fullName>
    <formula>Project_Owner_Account__r.SF_Account_Number__c</formula>
    <inlineHelpText>SF Account Number of project owner.</inlineHelpText>
    <label>Project Owner SF Number</label>
    <type>Text</type>
</CustomField>