force-app/main/default/objects/Contribution_Share__c/fields/Project_Owner_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_uB_Office__c</fullName>
    <formula>text( Project_Owner_Account__r.uB_Office__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner uB Office</label>
    <type>Text</type>
</CustomField>