force-app/main/default/objects/Contribution_Share__c/fields/Reporting_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Reporting_uB_Office__c</fullName>
    <label>Reporting uB Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Rest of APAC</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>