force-app/main/default/objects/Contribution_Share__c/fields/Share_HQ__c.field-meta.xml
<CustomField>
    <fullName>Share_HQ__c</fullName>
    <formula>1 - Share_Americas__c - Share_China__c - Share_EMEA__c - Share_Japan__c - Share_Korea__c - Share_Taiwan__c - Share_RoA__c -  Share_India__c  -  Share_Australia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Share HQ = 100% - share of all other regions</inlineHelpText>
    <label>Share HQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>