force-app/main/default/objects/Contribution_Share__c/fields/Share_India__c.field-meta.xml
<CustomField>
    <fullName>Share_India__c</fullName>
    <inlineHelpText>Share of contribution for this uB Office</inlineHelpText>
    <label>Share India</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>