force-app/main/default/objects/Contribution_Share__c/validationRules/Product_Filter_Value_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Filter_Value_can_not_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>OR (AND (
 TEXT(Product_Filter_Field__c )!= NULL,
Product_Filter_Value__c == NULL,
Product__c == NULL
),
AND(
TEXT(Product_Filter_Field__c) == NULL, 
Product_Filter_Value__c != NULL,
Product__c == NULL)
)</errorConditionFormula>
    <errorDisplayField>Product_Filter_Value__c</errorDisplayField>
    <errorMessage>Please fill in value of the Product Filter Field</errorMessage>
</ValidationRule>