force-app/main/default/objects/Contribution_Share__c/validationRules/Select_Product_or_Product_Filter_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Product_or_Product_Filter_Field</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND( 
Product__c != NULL,
OR(
TEXT(Product_Filter_Field__c ) != NULL,
Product_Filter_Value__c!= NULL
)
), AND(
Product__c == NULL,
TEXT(Product_Filter_Field__c ) == NULL,
Product_Filter_Value__c== NULL
))</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Please select either Product or Product Filter Field</errorMessage>
</ValidationRule>