force-app/main/default/objects/Contribution_Share__c/validationRules/Share_India_out_of_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Share_India_out_of_range</fullName>
    <active>true</active>
    <errorConditionFormula>or(Share_India__c &gt; 1, Share_India__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Share_India__c</errorDisplayField>
    <errorMessage>The field must be set between 0 and 100 [percent]</errorMessage>
</ValidationRule>