force-app/main/default/objects/Contribution_Share__c/validationRules/Sum_of_Contribution_Shares_too_large.validationRule-meta.xml
<ValidationRule>
    <fullName>Sum_of_Contribution_Shares_too_large</fullName>
    <active>true</active>
    <errorConditionFormula>or(Share_HQ__c &gt; 1, Share_HQ__c &lt; 0)</errorConditionFormula>
    <errorMessage>The sum of all &quot;Share xx&quot; fields, shown as &quot;Share HQ&quot;, must be between 0% and 100%</errorMessage>
</ValidationRule>