force-app/main/default/objects/Contribution_Share__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_uB_Office__c</columns>
    <columns>End_Customer__c</columns>
    <columns>End_Customer_uB_Office__c</columns>
    <columns>Project_Owner_Account__c</columns>
    <columns>Project_Owner_uB_Office__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>